fix styling and add one more section for chrome plugin project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div>You can also monitor and analyse your expenses through reports and graphs.</div>
                         <div>Tech Stack: Angular, Java, D3, Bootstrap</div>
                         <div class="button-containers">
-                            <button class="button" onclick="window.open(`https://github.com/surveashwini/expense-manager-java`, '_blank');">UI</button>
+                            <button class="button" onclick="window.open(`https://github.com/surveashwini/expense-manager-angular-java`, '_blank');">UI</button>
                             <button class="button" onclick="window.open(`https://github.com/surveashwini/expense-manager-java`, '_blank');">Backend</button>
                         </div>
                     </section>
@@ -74,13 +74,51 @@
         </section>
     </section>
 
+    <section class="projects" style="background: url(./assets/p1.jpg) no-repeat fixed center; background-size: 100vw 100vh;">
+        <section class="project-container">
+            <article class="project-two">
+                <section class="project-details">
+                    <section class="project-description">
+                        <h2 class="project-number">02</h2>
+                        <h2 class="project-heading">Chrome Plugin</h2>
+                        <div>This simple chrome plugin will inform you immediately if there is no internet connection on your machine!</div>
+                        <div>Tech Stack: Javascript, HTML</div>
+                        <div class="button-containers">
+                            <button class="button" onclick="window.open(`https://github.com/surveashwini/no-internet-detector`, '_blank');">Source</button>
+                        </div>
+                    </section>
+                </section>
+            </article>
+            <!-- <article class="project-three">
+                <section class="project-details">
+                    <section class="project-description">
+                        <h2 class="project-number">02</h2>
+                        <h2 class="project-heading">Expense Manager</h2>
+                        <div>This app will help you to keep track of your everyday expenses as well as recurring ones!</div>
+                        <div>You can also monitor and analyse your expenses through reports and graphs.</div>
+                        <div>Tech Stack: Angular, Java, D3, Bootstrap</div>
+                        <div class="button-containers">
+                            <button class="button">UI</button>
+                            <button class="button">Backend</button>
+                        </div>
+
+
+                        Photo by Sincerely Media on Unsplash
+
+                    </section>
+                </section>
+            </article> -->
+        </section>
+    </section>
+
+
     <section class="projects" style="background: url(./assets/p3.jpg) no-repeat fixed center; background-size: cover;">
         <section class="project-container">
 
             <article class="project-three">
                 <section class="project-details">
                     <section class="project-description">
-                        <h2 class="project-number">02</h2>
+                        <h2 class="project-number">03</h2>
                         <h2 class="project-heading">Portfolio</h2>
                         <div>This website which you are browsing right now is developed with HTML, CSS and Javascript</div>
                         <div>I wanted to keep the tech-stack simple as the website is a static one.</div>
