added third project

--- a/index.html
+++ b/index.html
@@ -74,48 +74,43 @@
         </section>
     </section>
 
-    <section class="projects" style="background: url(./assets/p1.jpg) no-repeat fixed center; background-size: 100vw 100vh;">
+    <section class="plugins" style="background: url(./assets/p1.jpg) no-repeat fixed center; background-size: 100vw 100vh;">
         <section class="project-container">
             <article class="project-two">
                 <section class="project-details">
                     <section class="project-description">
                         <h2 class="project-number">02</h2>
-                        <h2 class="project-heading">Chrome Plugin</h2>
+                        <h2 class="project-heading">Internet connection status</h2>
                         <div>This simple chrome plugin will inform you immediately if there is no internet connection on your machine!</div>
                         <div>Tech Stack: Javascript, HTML</div>
                         <div class="button-containers">
+                            <button class="button" onclick="window.open(`https://chrome.google.com/webstore/detail/internet-connection-statu/pbhlmfomkkdohgjemfkdjelbncllgecc/related?hl=en&authuser=0`, '_blank');">Install Plugin</button>
                             <button class="button" onclick="window.open(`https://github.com/surveashwini/no-internet-detector`, '_blank');">Source</button>
                         </div>
                     </section>
                 </section>
             </article>
-            <!-- <article class="project-three">
+            <article class="project-three">
                 <section class="project-details">
                     <section class="project-description">
-                        <h2 class="project-number">02</h2>
-                        <h2 class="project-heading">Expense Manager</h2>
-                        <div>This app will help you to keep track of your everyday expenses as well as recurring ones!</div>
-                        <div>You can also monitor and analyse your expenses through reports and graphs.</div>
-                        <div>Tech Stack: Angular, Java, D3, Bootstrap</div>
+                        <h2 class="project-number">03</h2>
+                        <h2 class="project-heading">Reminder</h2>
+                        <div>This VSCode plugin will remind you of any activity that you need to be reminded of regularly.</div>
+                        <div>Tech Stack: Typescript</div>
                         <div class="button-containers">
-                            <button class="button">UI</button>
-                            <button class="button">Backend</button>
+                            <button class="button" onclick="window.open(`https://marketplace.visualstudio.com/items?itemName=ashwinisurve.reminder`, '_blank');">Install Plugin</button>
+                            <button class="button" onclick="window.open(`https://github.com/surveashwini/vscode-plugin-reminder`, '_blank');">Source</button>
                         </div>
-
-
-                        Photo by Sincerely Media on Unsplash
-
                     </section>
                 </section>
-            </article> -->
+            </article>
         </section>
     </section>
 
 
     <section class="projects" style="background: url(./assets/p3.jpg) no-repeat fixed center; background-size: cover;">
         <section class="project-container">
-
-            <article class="project-three">
+            <article class="project-four">
                 <section class="project-details">
                     <section class="project-description">
                         <h2 class="project-number">03</h2>
@@ -180,7 +175,7 @@
         <section id="contact" class="contact">
             <div class="contact-header">Get in touch.</div>
             <span class="contact-container">
-                <a class="contact-button" href="mailto:ashwini.mca.89@gmail.com"> Email</a>
+                <a class="contact-button" href="mailto:ashwinisurve.dev@gmail.com"> Email</a>
                 <a class="contact-button" href="https://github.com/surveashwini" target="_blank"> Github</a>
                 <a class="contact-button" href="https://www.linkedin.com/in/ashwini-surve-48382979/" target="_blank"> Linkedin</a>
             </span>
