update email address and linkedin profile details

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
         <section id="contact" class="contact">
             <div class="contact-header">Get in touch.</div>
             <span class="contact-container">
-                <a class="contact-button" href="mailto:ashwinisurve.dev@gmail.com"> Email</a>
+                <a class="contact-button" href="mailto:ashwini_surve@outlook.com" target="_blank"> Email</a>
                 <a class="contact-button" href="https://github.com/surveashwini" target="_blank"> Github</a>
-                <a class="contact-button" href="https://www.linkedin.com/in/ashwini-surve-48382979/" target="_blank"> Linkedin</a>
+                <a class="contact-button" href="https://www.linkedin.com/in/ashwinisurve/" target="_blank"> Linkedin</a>
             </span>
         </section>
 
