updated medium link

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="footer-links-container">
             <a class="footer-link" href="https://www.instagram.com/ashwini.surve.23/" target="_blank">Instagram</a>
-            <a class="footer-link" href="https://surveashwini.medium.com/" target="_blank">Medium</a>
+            <a class="footer-link" href="https://ashwinisurve.medium.com/" target="_blank">Medium</a>
             <a class="footer-link" href="license.html" target="_blank">License Info</a>
         </div>
     </footer>
